# IAI-Chemical-Chatbot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/app/: server.py
backend/app/chains/: agent.py  chain.py  code.py  conversation_name.py  evaluation.py  rag.py
backend/app/helpers/: agent_message_history.py  agent_output_parser.py  auth.py  configurable_agent.py  huggingface_endpoints.py  parse_tools.py  retrieve_context.py
backend/app/history/: chat_history.py  conversations.py  db_models.py  documents.py  message_converter.py
backend/app/models/: chain.py
backend/app/prompts/: agent.py  code.py  conversation_name.py  evaluation.py  rag.py
backend/app/retrievers/: chembl.py  document_retriever.py  pubchem.py  vector_db.py
backend/app/tools/: arxiv.py  calculator.py  chembl.py  configurable_tool.py  pubchem.py  vector_db.py  wikipedia.py
backend/database-staging/init/: 0000_create_conversations_table.sql
backend/database/init/: 0001_create_messages_table.sql  0002_create_documents_table.sql
backend/evaluate/: __main__.py  models.py
backend/evaluation/chats/: general_knowledge.yaml
backend/evaluation/chats/agent/: calculator.yaml  confluence.yaml  kit_pages.yaml  multitool.yaml
backend/evaluation/chats/chat_history/: bob.yaml
backend/evaluation/chats/documents/: MOF_Paper_1_en.yaml  MOF_Paper_2_en.yaml  MOF_Paper_3_en.yaml  cyclegan.yaml  (+5 more)
chembencher/: pyproject.toml
chembencher/chembencher/: collect_scores.py  model_wrapper.py  utils.py
chembencher/chembencher/experiments/: prompt.py
(+88 files in other folders)
